# Team-Project-Smart-Traffic-Violation-Pattern-Detector

./: CollisionX India Traffic Violation Detection.pptx  LICENSE  PROJECT_BLUEPRINT_1-BASIC.md  PROJECT_BLUEPRINT_2-PAGE_DEVELOPMENT_DETAILS.md  PROJECT_BLUEPRINT_3-VISUAL_DIAGRAMS.md  PROJECT_BLUEPRINT_4-AGILE_DOCUMENTATION.md  PROJECT_BLUEPRINT_4-CODE_QUALITY.md  PROJECT_BLUEPRINT_5-WORKFLOW_TIMELINE.md  README.md  app.py  pyproject.toml  requirements.txt
artifact file/: Agile_Template_v0.1.xlsx  Unit_Test_Plan_v0.1.xlsx
core/: dashboard_plot.py  dashboard_summary.py  data_generator.py  data_variables.py  map_plot.py  sidebar.py  trend_plot.py  utils.py  visualize_plot.py
pages/: 00_Home_Page.py  01_Numerical_Analysis.py  02_Visualize_Data.py  03_Trend_Analysis.py  04_Map_Visualization.py  05_Know_Your_Data.py  09_Upload_Dataset.py  10_View_Dataset.py  11_About_Page.py
team-contributions/all_plots_codes/: Amith_plots.py  Anshu_plots.py  Darsana_plots.py  Harika_plots.py  Mrunalini_Plots.py  Poojitha_Plots.py  Rakshitha_plots.py  Saniya_plots.py  Sanjana_Plots.py  ishwari_plot.py  monika_plots.py  saidul_plots.py
