[project]
name = "smart-traffic-violation-pattern-detector-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "folium>=0.16.0",
    "streamlit-folium>=0.18.0",
    "faker>=38.2.0",
    "streamlit-local-storage>=0.0.25",
]
